# bb-ions

./: .gitattributes  .gitignore  BBBBCs.ipynb  README.md  make_circuit.ipynb  pyproject.toml  using_errors.stim  using_noisetimes.stim
bb_HPC_sims/: run_mem_exp.py  submit.sh
bb_hpc__sims/: run_T2_mem_exp.py  submit_T2.sh
bb_hpc_sims/: clean.sh  little_run_mem_exp.py  little_submit.sh  run_001_helios_mem_exp.py  run_001_tham_mem_exp.py  run_helios_mem_exp.py  run_mem_exp.py  run_tham_mem_exp.py  submit.sh  submit_001_helios.sh  submit_001_tham.sh  submit_helios.sh  submit_tham.sh
bb_sims/: clean.sh  collected_stats.csv  collected_stats_90_8_10__T2=1.csv  example_collect_stats.py  run_mem_exp.py  submit.sh
circuits/: n=288,k=12,d=18,p=0.005,b=X,noise=longchain,r=18,code=BB,A=300207,B=031020.stim  n=30,k=4,d=5,p=0.001,b=X,noise=longchain,r=5,code=BB,A=0010,B=000122.stim  n=30,k=4,d=5,p=0.005,b=X,noise=longchain,r=5,code=BB,A=0010,B=000122.stim  nkd=[[108_8_10]],p=0.0005,b=X,noise=longchain,r=10,code=BB,l=9,m=6,A='300102',B='031020'.stim  nkd=[[108_8_10]],p=0.0005,b=X,noise=longchain_agnostic,r=10,code=BB,l=9,m=6,A='300102',B='031020'.stim  nkd=[[108_8_10]],p=0.0005,b=X,noise=uniform,r=10,code=BB,l=9,m=6,A='300102',B='031020'.stim  nkd=[[108_8_10]],p=0.0005,b=X,noise=uniform_agnostic,r=10,code=BB,l=9,m=6,A='300102',B='031020'.stim  nkd=[[108_8_10]],p=0.0005,b=Z,noise=longchain,r=10,code=BB,l=9,m=6,A='300102',B='031020'.stim  nkd=[[108_8_10]],p=0.0005,b=Z,noise=longchain_agnostic,r=10,code=BB,l=9,m=6,A='300102',B='031020'.stim  (+194 more)
collected_stats/: .gitattributes  (+17 more)
(+374 files in other folders)
